# npnd

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/npnd/: __init__.py  core.py  errors.py  test_util.py
src/npnd/_src/: config.py  dtypes.py  test_util.py
src/npnd/_src/numpy/: __init__.py
src/npnd/_src/ops/: broadcast.py  circuit.py  cumsum.py  diff.py  einsum.py  gather_nd.py  matmul.py  meshgrid.py  mod.py  one_hot.py  prefix.py  reshape.py  scatter.py  scatter_nd.py  shape.py  slice.py  sort.py  trace.py  values.py
src/npnd/_src/ops/tensorflow/: state_ops.py
src/npnd/numpy/: __init__.py
src/npnd/ops/: gather_nd.py  one_hot.py
tests/: test_basic.py  test_gather_nd.py  test_scatter_nd.py
